--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 body{
-    height: 1500px;
-    background: #111;
+    height: 500px;
+    background: #000;
 }
 nav{
     width: 220px;
@@ -19,4 +19,137 @@ nav{
     align-items: center;
     margin-left: 42%;
     margin-top: 44%;
+    position: fixed;
+    z-index: 111111111111111114752;
+}
+nav >a,i{
+    width: 47px;
+    height: 47px;
+    font-size: 32px;
+    color: #fff;
+    margin: 0 10px;
+    border-radius: 50%;
+    margin-top: 5px;
+    transition: .3s linear;
+}
+nav >a:hover{
+    background: dodgerblue;
+}
+header{
+    width: 25%;
+    height: 685px;
+    background: #000;
+    box-shadow: 0 0 35px 30px #333;
+    margin-left:1000px;
+    /* margin-top: -650px; */
+    z-index: 11111111111111112;
+}
+header > .item{
+    width: 280px;
+    height: 200px;
+    margin: 12px 12px;
+    margin-left: 32px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px 15px #101010;
+}
+header > .items, .items1, .items2, .items3{
+    width: 280px;
+    height: 200px;
+    margin: 12px 12px;
+    margin-left: 32px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px 15px #101010;
+    opacity: 0;
+}
+section{
+    width: 75%;
+    height: 680px;
+    /* background: red; */
+    margin-top: -680px;
+    z-index: 1111;
+}
+.name{
+    color: #fff;
+    font-family: monospace;
+    font-size: 45px;
+    text-align: center;
+    padding-top: 35px;
+    font-weight: lighter;
+}
+.x{
+    color: #fff;
+    font-size: 40px;
+    font-family: monospace;
+    font-weight: normal;
+    text-align: center;
+    cursor: pointer;
+    position: relative;
+    z-index: 12;
+}
+.infor{
+    color: #999;
+    font-family: monospace;
+    font-size: 25px;
+    text-align: center;
+    font-weight: lighter;
+    width: 80%;
+    margin-left: 120px;
+    line-height: 2.2;
+    margin-top: 20px;
+}
+section > .box{
+   width: 350px;
+   height: 350px;
+   box-shadow: 0 0 25px 10px #222;
+   margin: auto;
+   margin-top: 50px;
+   position: relative;
+   z-index: 0;
+   transition: .3s;
+   cursor: pointer;
+   overflow: hidden;
+}
+section>.box::before{
+    position: absolute;
+    content: 'Hello I,m';
+    font-family: monospace;
+    font-size: 55px;
+    color: #7c7c7c;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background: #44444463;
+    backdrop-filter: blur(10px);
+    top: -100%;
+    transition: .5s;
+}
+section>.box:hover::before{
+    top: 0;
+}
+section>.box>img{
+    width: 330px;
+    height: 330px;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+@media only screen and (min-width:50px){
+   body{
+       transform: scale(.3);
+   }
+   .name{
+       font-size: 24px;
+   }
+   .infor{
+       font-size: 14px;
+   }
+   .box{
+       width: 150px;
+       height: 150px;
+   }
+   header{
+       height: 585px;
+   }
+   header>img{
+       height: 55px;
+   }
 }
