--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ section>.box>img{
     margin-left: 10px;
     margin-top: 10px;
 }
-@media only screen and (min-width:50px){
+/* @media only screen and (min-width:50px){
    body{
        transform: scale(.3);
    }
@@ -152,4 +152,4 @@ section>.box>img{
    header>img{
        height: 55px;
    }
-}
+} */
