--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
     box-sizing: border-box;
 }
 body{
-    height: 500px;
+    height:100vh;
     background: #000;
+    overflow: hidden;
 }
 nav{
     width: 220px;
@@ -22,18 +23,19 @@ nav{
     position: fixed;
     z-index: 111111111111111114752;
 }
-nav >a,i{
-    width: 47px;
-    height: 47px;
+nav >a i{
+
     font-size: 32px;
     color: #fff;
     margin: 0 10px;
-    border-radius: 50%;
     margin-top: 5px;
     transition: .3s linear;
+    border-radius:50%;
+    
 }
-nav >a:hover{
-    background: dodgerblue;
+nav >a i:hover{
+    box-shadow: 0 0 10px 10px dodgerblue;
+
 }
 header{
     width: 25%;
@@ -108,18 +110,27 @@ section > .box{
    transition: .3s;
    cursor: pointer;
    overflow: hidden;
+   animation: boxs .5s linear infinite alternate;
+}
+@keyframes boxs {
+    from{
+        box-shadow: 0 0 10px 10px #222;
+    }
+    to{
+        box-shadow: 0 0 10px 10px #222;
+    }
 }
 section>.box::before{
     position: absolute;
     content: 'Hello I,m';
     font-family: monospace;
     font-size: 55px;
-    color: #7c7c7c;
+    color: #ffffff;
     width: 100%;
     height: 100%;
     text-align: center;
-    background: #44444463;
-    backdrop-filter: blur(10px);
+    background: #00000063;
+    backdrop-filter: blur(0.0.1px);
     top: -100%;
     transition: .5s;
 }
@@ -132,24 +143,52 @@ section>.box>img{
     margin-left: 10px;
     margin-top: 10px;
 }
-/* @media only screen and (min-width:50px){
-   body{
-       transform: scale(.3);
-   }
-   .name{
-       font-size: 24px;
-   }
-   .infor{
-       font-size: 14px;
-   }
-   .box{
-       width: 150px;
-       height: 150px;
-   }
-   header{
-       height: 585px;
-   }
-   header>img{
-       height: 55px;
-   }
-} */
+main{
+    width: 100%;
+    height: 850px;
+    /* background: red; */
+}
+#container{
+    width: 95%;
+    height: 80%;
+    outline: 3px solid #818181;
+    position: absolute;
+    left: 101%;
+    cursor: pointer;
+    transition: .3s linear;
+    margin-top: -600px;
+    
+    
+}
+input{
+    position: absolute;
+    bottom: 535px;
+    left: 45%;
+    width: 120px;
+    height: 44px;
+    
+}
+#container:hover{
+    background: #112;
+}
+#container:hover>i{
+    animation: container .9s alternate infinite;
+}
+@keyframes container {
+    to{
+       transform: scale(1.1);
+    }
+}
+#container>i{
+    margin: 50px 65px;              
+}
+.btn{
+    position: absolute;
+    bottom: 535px;
+    left: 55%;
+    height: 44px;
+    width: 120px;
+    font-size: 28px;
+    background: dodgerblue;
+    cursor: pointer;
+}
